fixed grammar description_aplod

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,7 @@
     <string name="about_aplod">About Aplod</string>
     <string name="aplod_stand_for">Aplod stand for</string>
     <string name="kepanjangan_aplod">"Aman Pesannya Let's gO uploaD"</string>
-    <string name="description_aplod">is an app that solely focused to make people preventing people using bad words
+    <string name="description_aplod">is an app that solely focused to preventing people using bad words
         for typing or saying something in social media because people often
     getting the ITE law penalty because of their bad behavior.</string>
 </resources>
