--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="description_aplod">is an app that solely focused to preventing people using bad words
         for typing or saying something in social media because people often
     getting the ITE law penalty because of their bad behavior.</string>
+    <string name="negatif">negatif</string>
 </resources>
