--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
         for typing or saying something in social media because people often
     getting the ITE law penalty because of their bad behavior.</string>
     <string name="negatif">negatif</string>
+    <string name="sentiment">Sentimen:</string>
 </resources>
